--- a/shopping-cart/Jenkinsfile
+++ b/shopping-cart/Jenkinsfile
@@ -24,8 +24,7 @@ pipeline {
                 dir('shopping-cart') {
                     sh """
                         oc patch deployment security-scans \
-                        -p '{"spec": {"template": {"metadata": {"labels":
-{"build": "build-${BUILD_NUMBER}"}}}}}' \
+                        -p '{"spec": {"template": {"metadata": {"labels":{"build": "build-${BUILD_NUMBER}"}}}}}' \
                         -n ${APP_NAMESPACE}
                     """
                 }   
