--- a/greeting-cd-pipeline/Jenkinsfile
+++ b/greeting-cd-pipeline/Jenkinsfile
@@ -8,10 +8,20 @@ pipeline {
 
         stage('Test'){
             steps {
-                sh "node test.js"
+                dir('greeting-cd-pipeline') {
+                    sh "node test.js"
+                }
             }
         }
 
         // Add more stages here
+        stage('Deploy') {
+            steps {
+                sh '''
+                    oc start-build greeting-metrics \
+                    --follow --wait -n lhfqsx-metrics
+                '''
+            }
+        }
     }
 }
