--- a/greeting-cd-pipeline/Jenkinsfile
+++ b/greeting-cd-pipeline/Jenkinsfile
@@ -1,26 +1,20 @@
 pipeline {
-    agent { label 'nodejs' }
-
-    // Set your OCP project
-
-    stages{
-
-        stage('Test'){
-            steps {
-                dir('greeting-cd-pipeline') {
-                    sh "node test.js"
-                }
-            }
-        }
-
-        // Add more stages here
-        stage('Deploy') {
-            steps {
-                sh '''
-                    oc start-build greeting-metrics \
-                    --follow --wait -n lhfqsx-metrics
-                '''
-            }
-        }
-    }
+agent { label 'nodejs' }
+stages{
+stage('Test'){
+steps {
+dir('greeting-cd-pipeline') {
+sh "node test.js"
+}
+}
+}
+stage('Deploy') {
+steps {
+sh '''
+oc start-build greeting-metrics \
+--follow --wait -n RHT_OCP4_DEV_USER-metrics
+'''
+}
+}
+}
 }
