--- a/greeting-cd-pipeline/Jenkinsfile
+++ b/greeting-cd-pipeline/Jenkinsfile
@@ -12,7 +12,7 @@ stage('Deploy') {
 steps {
 sh '''
 oc start-build greeting-metrics \
---follow --wait -n RHT_OCP4_DEV_USER-metrics
+--follow --wait -n lhfqsx-metrics
 '''
 }
 }
